--- a/CSS/main.css
+++ b/CSS/main.css
@@ -2,6 +2,10 @@
 @import "./components/font-awesome.min.css";
 @import "./components/button.css";
 
+:root {
+  --primary-color: tomato;
+}
+
 body {
   display: flex;
   flex-direction: column;
@@ -11,8 +15,77 @@ body {
 }
 
 .container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
   width: 100%;
-  background-color: darkgoldenrod;
+
+  gap: 50px;
+}
+
+.container > *:first-child {
+  margin-right: auto;
+}
+
+.logo {
+  max-height: 40px;
+}
+
+.menu {
+  display: flex;
+  gap: 20px;
+}
+
+.menu > a {
+  color: #000;
+}
+
+.icons {
+  display: flex;
+  gap: 20px;
+}
+
+.icons > a:hover {
+  color: var(--primary-color);
+}
+
+.gallery {
+  width: 60%;
+  position: relative;
+  padding: 0 0.7em;
+}
+
+.gallery > img {
+  width: 100%;
+}
+
+.gallery > .fa {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 1.4em;
+  height: 1.4em;
+  line-height: 1.4em;
+  font-size: 50px;
+  text-align: center;
+  background-color: var(--primary-color);
+  border-radius: 50%;
+}
+
+.gallery > .fa.fa-angle-left {
+  left: 0;
+  padding-right: 0.17em;
+  /* transform: translateX(-50%); */
+}
+
+.gallery > .fa.fa-angle-right {
+  right: 0;
+  padding-left: 0.17em;
+  /* transform: translateX(50%); */
+}
+
+.text {
+  width: 40%;
 }
 
 @media (min-width: 480px) {
