--- a/CSS/main.css
+++ b/CSS/main.css
@@ -8,10 +8,18 @@
 
 body {
   display: flex;
+  height: 100vh;
   flex-direction: column;
-  gap: 20px;
+  gap: 30px;
   justify-content: flex-start;
   align-items: center;
+}
+
+.main .container {
+  min-height: calc(100% - 80px);
+  justify-content: flex-start;
+  flex-direction: column;
+  text-align: center;
 }
 
 .container {
@@ -19,7 +27,6 @@ body {
   justify-content: flex-end;
   align-items: center;
   width: 100%;
-
   gap: 50px;
 }
 
@@ -29,6 +36,7 @@ body {
 
 .logo {
   max-height: 40px;
+  margin-right: auto;
 }
 
 .menu {
@@ -40,13 +48,7 @@ body {
   color: #000;
 }
 
-.icons {
-  display: flex;
-  gap: 20px;
-}
-
-.icons > a:hover {
-  color: var(--primary-color);
+.menu > a:hover {
 }
 
 .gallery {
@@ -55,7 +57,11 @@ body {
   padding: 0 0.7em;
 }
 
-.gallery > img {
+.gallery > picture {
+  width: 100%;
+}
+
+.gallery > picture > img {
   width: 100%;
 }
 
@@ -90,7 +96,13 @@ body {
 
 @media (min-width: 480px) {
   .container {
-    width: 360px;
+    width: 440px;
+  }
+  .menu {
+    display: flex;
+  }
+  .hambuerger {
+    display: none;
   }
 }
 
